@@ -8522,7 +8522,9 @@ AND m.meta_value='queued'";
 		 * @return string
 		 */
 		public function settings_feed_condition( $field, $echo = true ) {
-			$entry_meta  = array_merge( $this->get_feed_condition_entry_meta(), $this->get_feed_condition_entry_properties() );
+			$form_id     = absint( rgget( 'id' ) );
+			$step_id     = $this->get_current_feed_id();
+			$entry_meta  = array_merge( $this->get_feed_condition_entry_meta( $form_id, $step_id ), $this->get_feed_condition_entry_properties() );
 			$find        = 'var feedCondition';
 			$replacement = sprintf( 'var entry_meta = %s; %s', json_encode( $entry_meta ), $find );
 
@@ -8547,12 +8549,14 @@ AND m.meta_value='queued'";
 		 * Get the entry meta for use with the feed_condition setting.
 		 *
 		 * @since 1.7.1-dev
+		 * @since 2.6.1     Added parameters for form_id and step_id.
+		 *
+		 * @param int $form_id The form ID.
+		 * @param int $step_id The step ID.		 
 		 *
 		 * @return array
 		 */
-		public function get_feed_condition_entry_meta() {
-			$step_id    = absint( rgget( 'fid' ) );
-			$form_id    = absint( rgget( 'id' ) );
+		public function get_feed_condition_entry_meta( $form_id = 0, $step_id = 0 ) {
 			$entry_meta = GFFormsModel::get_entry_meta( $form_id );
 
 			unset( $entry_meta['workflow_final_status'], $entry_meta['workflow_step'], $entry_meta[ 'workflow_step_status_' . $step_id ] );
@@ -8707,7 +8711,8 @@ AND m.meta_value='queued'";
 				return true;
 			}
 
-			$entry_meta      = array_merge( $this->get_feed_condition_entry_meta(), $this->get_feed_condition_entry_properties() );
+			$form_id         = $form['id'];			
+			$entry_meta      = array_merge( $this->get_feed_condition_entry_meta( $form_id ), $this->get_feed_condition_entry_properties() );
 			$entry_meta_keys = array_keys( $entry_meta );
 			$match_count     = 0;
 
