@@ -8,3 +8,4 @@
 - Fix JS errors with multiple status shortcodes on the same page.
 - Fixed an issue where workflow steps are processed for entry revisions created by GravityView Entry Revisions.
 - Fixed an issue with the print button on workflow details page and on front-end pages.
+- Fixed an issue with Step Condition on Form Submission Step. The entry meta of child form was fetched to process the condition, instead of parent form.
